--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,9 +13,8 @@
             android:id="@+id/textViewAverageRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Average Rating: 4.5"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:text="Average Rating: N/A"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textViewTitle"
@@ -25,7 +23,8 @@
             android:layout_below="@id/textViewAverageRating"
             android:layout_marginTop="16dp"
             android:text="Title: Recipe Title"
-            android:textSize="16sp" />
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textViewDescription"
@@ -34,7 +33,8 @@
             android:layout_below="@id/textViewTitle"
             android:layout_marginTop="8dp"
             android:text="Description: Recipe Description"
-            android:textSize="16sp" />
+            android:textSize="20sp"
+            android:textStyle="bold|italic" />
 
         <TextView
             android:id="@+id/textViewIngredients"
@@ -43,7 +43,8 @@
             android:layout_below="@id/textViewDescription"
             android:layout_marginTop="8dp"
             android:text="Ingredients: Recipe Ingredients"
-            android:textSize="16sp" />
+            android:textSize="18sp"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/textViewInstructions"
