--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -2,8 +2,161 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout3"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".AddRecipeActivity">
+    android:layout_height="match_parent">
+
+    <!-- Header -->
+
+    <!-- Title -->
+
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="60dp"
+        android:paddingBottom="16dp"
+        android:text="Add a new recipe here!"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.318" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Title:"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTitle"
+        app:layout_constraintEnd_toStartOf="@+id/editTextTitle"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <!-- Description -->
+
+
+    <EditText
+        android:id="@+id/editTextTitle"
+        android:layout_width="320dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="48dp"
+        android:hint="Title"
+        android:inputType="text"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Description:"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextDescription"
+        app:layout_constraintEnd_toStartOf="@+id/editTextDescription"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <!-- Ingredients -->
+
+
+    <EditText
+        android:id="@+id/editTextDescription"
+        android:layout_width="283dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="12dp"
+        android:hint="Description"
+        android:inputType="textMultiLine"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Ingredients:"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextIngredients"
+        app:layout_constraintEnd_toStartOf="@+id/editTextIngredients"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <!-- Instructions -->
+
+
+    <!-- Buttons -->
+
+
+    <EditText
+        android:id="@+id/editTextIngredients"
+        android:layout_width="287dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="12dp"
+        android:hint="Ingredients"
+        android:inputType="textMultiLine"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Instructions:"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextInstructions"
+        app:layout_constraintEnd_toStartOf="@+id/editTextInstructions"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextInstructions"
+        android:layout_width="273dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="12dp"
+        android:hint="Instructions"
+        android:inputType="textMultiLine"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/editTextIngredients" />
+
+    <Button
+        android:id="@+id/buttonClear"
+        android:layout_width="398dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="156dp"
+        android:backgroundTint="#F44336"
+        android:text="Clear"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextInstructions" />
+
+    <Button
+        android:id="@+id/buttonCreate"
+        android:layout_width="398dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="48dp"
+        android:text="Create"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
